--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,6 +15,9 @@ jobs:
     
     # install newest swift version
     - uses: swift-actions/setup-swift@v2
+    
+    - name: Select Xcode Version
+      run: sudo xcode-select -s /Applications/Xcode_14.0.app
 
     - name: Build
       run: xcodebuild build -scheme YourSchemeName -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0'
