--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -20,7 +20,7 @@ jobs:
       run: sudo xcode-select -s /Applications/Xcode_15.3.app
 
     - name: Build
-      run: xcodebuild build -scheme SwiftFFmpeg -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0'
+      run: xcodebuild build -scheme SwiftFFmpeg CODE_SIGNING_ALLOWED=NO -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0'
     
     - name: Run tests
-      run: xcodebuild test -scheme SwiftFFmpeg -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0'
+      run: xcodebuild test-without-building -scheme SwiftFFmpeg CODE_SIGNING_ALLOWED=NO -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15,OS=17.0'
