--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -23,4 +23,4 @@ jobs:
       run: xcodebuild build -scheme SwiftFFmpeg CODE_SIGNING_ALLOWED=NO -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.4'
     
     - name: Run tests
-      run: xcodebuild test-without-building -scheme SwiftFFmpeg CODE_SIGNING_ALLOWED=NO -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.4'
+      run: xcodebuild test-without-building -scheme SwiftFFmpegTests CODE_SIGNING_ALLOWED=NO -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.4'
