--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,7 +16,11 @@ jobs:
     # install newest swift version
     - uses: swift-actions/setup-swift@v2
     
+    - name: Select Xcode Version
+      run: sudo xcode-select -s /Applications/Xcode_15.3.app
+
     - name: Build
-      run: swift build -v
+      run: xcodebuild build -scheme SwiftFFmpeg CODE_SIGNING_ALLOWED=NO -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.4'
+    
     - name: Run tests
-      run: swift test -v
+      run: xcodebuild test -scheme SwiftFFmpegTests CODE_SIGNING_ALLOWED=NO -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 15 Pro,OS=17.4'
