--- a/.github/workflows/swift_linux.yml
+++ b/.github/workflows/swift_linux.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Install ffmpeg
-      run: apt-get update && apt-get install -y ffmpeg && apt-get install -y libavcodec-dev libavformat-dev libavutil-dev libswscale-dev libavfilter-dev libswresample-dev
+      run: apt-get update && apt-get install -y ffmpeg && apt-get install -y libavcodec-dev libavformat-dev libavutil-dev libswscale-dev libavfilter-dev libswresample-dev libavdevice-dev
     - name: Build
       run: swift build -v
     - name: Run tests
